Copy pasted the script for republicans

--- a/scrapeX/dataParser.ipynb
+++ b/scrapeX/dataParser.ipynb
@@ -98,6 +98,58 @@
    },
    "id": "9f3a2a684b32f4ed",
    "execution_count": 48
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "tweets = []\n",
+    "for i in range(len(rep_accs)):\n",
+    "    rep_tweets = os.listdir(os.path.join(\"rep\", rep_accs[i]))\n",
+    "    for j in range(len(rep_tweets)):\n",
+    "        data = json.load(open(os.path.join(\"rep\", rep_accs[i], rep_tweets[j])))\n",
+    "        tweet_text = remove_emojis_and_links(data[\"rawContent\"])\n",
+    "        if tweet_text != \"\":\n",
+    "            tweets.append(tweet_text)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-09T15:28:19.645451Z",
+     "start_time": "2024-04-09T15:27:16.497119Z"
+    }
+   },
+   "id": "b84d9e7d606e5e85",
+   "execution_count": 49
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "with open(\"republicans.csv\", 'w', newline='') as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    writer.writerow([\"text\"])\n",
+    "    for tweet in tweets:\n",
+    "        writer.writerow([tweet])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-09T15:28:29.086235Z",
+     "start_time": "2024-04-09T15:28:29.023134Z"
+    }
+   },
+   "id": "177864028d9b5818",
+   "execution_count": 50
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7e2ae579c16a809d"
   }
  ],
  "metadata": {
