--- a/scrapeX/dataParser.ipynb
+++ b/scrapeX/dataParser.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-04-09T14:58:24.380003Z",
-     "start_time": "2024-04-09T14:58:24.375532Z"
+     "end_time": "2024-04-10T20:06:43.357725Z",
+     "start_time": "2024-04-10T20:06:43.347567Z"
     }
    },
    "outputs": [],
@@ -26,18 +26,19 @@
     "def remove_emojis_and_links(text):\n",
     "    text = re.sub(r'[^\\x00-\\x7F]+', '', text)\n",
     "    text = re.sub(r'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\\\(\\\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+', '', text)\n",
+    "    text = re.sub(r'@\\w+', '', text)\n",
     "    text = text.replace(\"\\n\", \"\")\n",
     "    return text.strip()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-09T14:28:09.051658Z",
-     "start_time": "2024-04-09T14:28:09.045822Z"
+     "end_time": "2024-04-10T20:06:43.367084Z",
+     "start_time": "2024-04-10T20:06:43.360454Z"
     }
    },
    "id": "afb03f3be0e324bb",
-   "execution_count": 34
+   "execution_count": 52
   },
   {
    "cell_type": "code",
@@ -49,12 +50,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-09T13:39:48.139371Z",
-     "start_time": "2024-04-09T13:39:48.134734Z"
+     "end_time": "2024-04-10T20:06:43.389256Z",
+     "start_time": "2024-04-10T20:06:43.369256Z"
     }
    },
    "id": "85ceebb2230dc54e",
-   "execution_count": 4
+   "execution_count": 53
   },
   {
    "cell_type": "code",
@@ -72,12 +73,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-09T15:19:31.447363Z",
-     "start_time": "2024-04-09T15:19:30.066063Z"
+     "end_time": "2024-04-10T20:07:54.021330Z",
+     "start_time": "2024-04-10T20:06:43.391724Z"
     }
    },
    "id": "ab8b43382e4c4cf1",
-   "execution_count": 47
+   "execution_count": 54
   },
   {
    "cell_type": "code",
@@ -92,12 +93,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-09T15:19:31.480995Z",
-     "start_time": "2024-04-09T15:19:31.448457Z"
+     "end_time": "2024-04-10T20:08:41.564188Z",
+     "start_time": "2024-04-10T20:08:41.538894Z"
     }
    },
    "id": "9f3a2a684b32f4ed",
-   "execution_count": 48
+   "execution_count": 57
   },
   {
    "cell_type": "code",
@@ -115,12 +116,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-09T15:28:19.645451Z",
-     "start_time": "2024-04-09T15:27:16.497119Z"
+     "end_time": "2024-04-10T20:09:49.148893Z",
+     "start_time": "2024-04-10T20:08:41.566587Z"
     }
    },
    "id": "b84d9e7d606e5e85",
-   "execution_count": 49
+   "execution_count": 58
   },
   {
    "cell_type": "code",
@@ -135,21 +136,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-09T15:28:29.086235Z",
-     "start_time": "2024-04-09T15:28:29.023134Z"
+     "end_time": "2024-04-10T20:09:49.185656Z",
+     "start_time": "2024-04-10T20:09:49.150518Z"
     }
    },
    "id": "177864028d9b5818",
-   "execution_count": 50
+   "execution_count": 59
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-10T20:09:49.192965Z",
+     "start_time": "2024-04-10T20:09:49.187689Z"
+    }
    },
-   "id": "7e2ae579c16a809d"
+   "id": "7e2ae579c16a809d",
+   "execution_count": 59
   }
  ],
  "metadata": {
