--- a/scrapeX/dataParser.ipynb
+++ b/scrapeX/dataParser.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-04-10T20:06:43.357725Z",
-     "start_time": "2024-04-10T20:06:43.347567Z"
+     "end_time": "2024-04-13T14:24:56.282606Z",
+     "start_time": "2024-04-13T14:24:56.278622Z"
     }
    },
    "outputs": [],
@@ -16,7 +16,10 @@
     "import os\n",
     "import json\n",
     "import re\n",
-    "import csv"
+    "import csv\n",
+    "from datetime import datetime\n",
+    "\n",
+    "start_time = datetime.now()"
    ]
   },
   {
@@ -27,135 +30,315 @@
     "    text = re.sub(r'[^\\x00-\\x7F]+', '', text)\n",
     "    text = re.sub(r'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\\\(\\\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+', '', text)\n",
     "    text = re.sub(r'@\\w+', '', text)\n",
+    "    text = re.sub(r'[^a-zA-Z0-9\\s]|RT', '', text)\n",
+    "    text = re.sub(r'\\s+', ' ', text)\n",
     "    text = text.replace(\"\\n\", \"\")\n",
     "    return text.strip()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-10T20:06:43.367084Z",
-     "start_time": "2024-04-10T20:06:43.360454Z"
+     "end_time": "2024-04-13T14:24:56.305873Z",
+     "start_time": "2024-04-13T14:24:56.300190Z"
     }
    },
    "id": "afb03f3be0e324bb",
-   "execution_count": 52
+   "execution_count": 18
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "266 democrat accounts\n",
+      "9135 republican accounts\n"
+     ]
+    }
+   ],
    "source": [
-    "dem_accs = os.listdir(\"dem\")\n",
-    "rep_accs = os.listdir(\"rep\")"
+    "path = os.path.join(\"..\", \"..\", \"DATA\")\n",
+    "\n",
+    "dem_accs_filepath = os.listdir(os.path.join(path, \"dem\"))\n",
+    "rep_accs_filepath = os.listdir(os.path.join(path, \"rep\"))\n",
+    "    \n",
+    "print(f\"{len(dem_accs_filepath)} democrat accounts\")\n",
+    "print(f\"{len(rep_accs_filepath)} republican accounts\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-10T20:06:43.389256Z",
-     "start_time": "2024-04-10T20:06:43.369256Z"
+     "end_time": "2024-04-13T14:24:56.317845Z",
+     "start_time": "2024-04-13T14:24:56.308117Z"
     }
    },
-   "id": "85ceebb2230dc54e",
-   "execution_count": 53
+   "id": "c2722b98de63c078",
+   "execution_count": 19
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "tweets = []\n",
-    "for i in range(len(dem_accs)):\n",
-    "    dem_tweets = os.listdir(os.path.join(\"dem\", dem_accs[i]))\n",
-    "    for j in range(len(dem_tweets)):\n",
-    "        data = json.load(open(os.path.join(\"dem\", dem_accs[i], dem_tweets[j])))\n",
-    "        tweet_text = remove_emojis_and_links(data[\"rawContent\"])\n",
-    "        if tweet_text != \"\":\n",
-    "            tweets.append(tweet_text)"
+    "def get_tweets(accs_filepath, party):\n",
+    "    tweets = []\n",
+    "    for i in range(len(accs_filepath)):\n",
+    "        tweets_ = os.listdir(os.path.join(path, party, accs_filepath[i]))\n",
+    "        for j in range(len(tweets_)):\n",
+    "            try:\n",
+    "                data = json.load(open(os.path.join(path, party, accs_filepath[i], tweets_[j])))\n",
+    "                tweets.append(data[\"rawContent\"])\n",
+    "            except:\n",
+    "                print(f\"Error with {os.path.join(path, party, accs_filepath[i], tweets_[j])}\")\n",
+    "    return tweets"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-10T20:07:54.021330Z",
-     "start_time": "2024-04-10T20:06:43.391724Z"
+     "end_time": "2024-04-13T14:34:03.393242Z",
+     "start_time": "2024-04-13T14:34:03.386770Z"
+    }
+   },
+   "id": "50ab0df21033ed2e",
+   "execution_count": 28
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error with tweet_1777428755675320787.json\n",
+      "0 democrat tweets, 0.0 tweets per account\n",
+      "279576 republican tweets, 30.604926108374386 tweets per account\n"
+     ]
+    }
+   ],
+   "source": [
+    "dem_tweets = []\n",
+    "rep_tweets = []\n",
+    "\n",
+    "dem_tweets = get_tweets(dem_accs_filepath, \"dem\")\n",
+    "rep_tweets = get_tweets(rep_accs_filepath, \"rep\")\n",
+    "\n",
+    "print(f\"{len(dem_tweets)} democrat tweets, {len(dem_tweets) / len(dem_accs_filepath)} tweets per account\")\n",
+    "print(f\"{len(rep_tweets)} republican tweets, {len(rep_tweets) / len(rep_accs_filepath)} tweets per account\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-13T14:54:06.125081Z",
+     "start_time": "2024-04-13T14:34:03.752915Z"
     }
    },
    "id": "ab8b43382e4c4cf1",
-   "execution_count": 54
+   "execution_count": 29
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "with open(\"democrats.csv\", 'w', newline='') as f:\n",
-    "    writer = csv.writer(f)\n",
-    "    writer.writerow([\"text\"])\n",
+    "def clean_tweets(tweets):\n",
+    "    cleaned_tweets = []\n",
     "    for tweet in tweets:\n",
-    "        writer.writerow([tweet])"
+    "        cleaned = remove_emojis_and_links(tweet)\n",
+    "        if cleaned.strip() != \"\":\n",
+    "            cleaned_tweets.append(cleaned)\n",
+    "    return cleaned_tweets"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-10T20:08:41.564188Z",
-     "start_time": "2024-04-10T20:08:41.538894Z"
+     "end_time": "2024-04-13T14:54:06.131656Z",
+     "start_time": "2024-04-13T14:54:06.126717Z"
+    }
+   },
+   "id": "15055f4b9acd31e6",
+   "execution_count": 30
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 democrat tweets, 0 removed\n",
+      "269424 republican tweets, 10152 removed\n"
+     ]
+    }
+   ],
+   "source": [
+    "dem_tweets_cleaned = []\n",
+    "rep_tweets_cleaned = []\n",
+    "\n",
+    "dem_tweets_cleaned = clean_tweets(dem_tweets)\n",
+    "rep_tweets_cleaned = clean_tweets(rep_tweets)\n",
+    "\n",
+    "print(f\"{len(dem_tweets_cleaned)} democrat tweets, {len(dem_tweets) - len(dem_tweets_cleaned)} removed\")\n",
+    "print(f\"{len(rep_tweets_cleaned)} republican tweets, {len(rep_tweets) - len(rep_tweets_cleaned)} removed\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-13T14:54:11.321504Z",
+     "start_time": "2024-04-13T14:54:06.134086Z"
+    }
+   },
+   "id": "2e1130f39c023ac7",
+   "execution_count": 31
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "def pick_long_tweets(tweets, length):\n",
+    "    long_tweets = []\n",
+    "    for tweet in tweets:\n",
+    "        if len(tweet.split()) > length:\n",
+    "            long_tweets.append(tweet)\n",
+    "    return long_tweets"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-13T14:54:11.328671Z",
+     "start_time": "2024-04-13T14:54:11.324100Z"
+    }
+   },
+   "id": "72d75117e83b4f1c",
+   "execution_count": 32
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 democrat tweets longer than 10 words, 0 removed\n",
+      "207921 republican tweets longer than 10 words, 61503 removed\n"
+     ]
+    }
+   ],
+   "source": [
+    "dem_tweets_long = []\n",
+    "rep_tweets_long = []\n",
+    "\n",
+    "dem_tweets_long = pick_long_tweets(dem_tweets_cleaned, 10)\n",
+    "rep_tweets_long = pick_long_tweets(rep_tweets_cleaned, 10)\n",
+    "\n",
+    "print(f\"{len(dem_tweets_long)} democrat tweets longer than 10 words, {len(dem_tweets_cleaned) - len(dem_tweets_long)} removed\")\n",
+    "print(f\"{len(rep_tweets_long)} republican tweets longer than 10 words, {len(rep_tweets_cleaned) - len(rep_tweets_long)} removed\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-13T14:54:11.652492Z",
+     "start_time": "2024-04-13T14:54:11.331566Z"
+    }
+   },
+   "id": "1d142e48cc423296",
+   "execution_count": 33
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final amount of democrat tweets: 0, 0.0 tweets per account, total removed 0\n",
+      "Final amount of republican tweets: 207921, 22.760919540229885 tweets per account, total removed 71655\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Final amount of democrat tweets: {len(dem_tweets_long)}, {len(dem_tweets_long) / len(dem_accs_filepath)} tweets per account, total removed {len(dem_tweets) - len(dem_tweets_long)}\")\n",
+    "print(f\"Final amount of republican tweets: {len(rep_tweets_long)}, {len(rep_tweets_long) / len(rep_accs_filepath)} tweets per account, total removed {len(rep_tweets) - len(rep_tweets_long)}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-13T14:54:11.659529Z",
+     "start_time": "2024-04-13T14:54:11.653650Z"
+    }
+   },
+   "id": "9cf4a266ec191b80",
+   "execution_count": 34
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final amount of democrat tweets without dublicates: 0, 0.0 tweets per account, total removed 0\n",
+      "Final amount of republican tweets without dublicates: 147470, 16.143404488232076 tweets per account, total removed 60451\n"
+     ]
+    }
+   ],
+   "source": [
+    "dem_tweets_withoutdublicates = []\n",
+    "rep_tweets_withoutdublicates = []\n",
+    "\n",
+    "dem_tweets_withoutdublicates = list(set(dem_tweets_long))\n",
+    "rep_tweets_withoutdublicates = list(set(rep_tweets_long))\n",
+    "\n",
+    "print(f\"Final amount of democrat tweets without dublicates: {len(dem_tweets_withoutdublicates)}, {len(dem_tweets_withoutdublicates) / len(dem_accs_filepath)} tweets per account, total removed {len(dem_tweets_long) - len(dem_tweets_withoutdublicates)}\")\n",
+    "print(f\"Final amount of republican tweets without dublicates: {len(rep_tweets_withoutdublicates)}, {len(rep_tweets_withoutdublicates) / len(rep_accs_filepath)} tweets per account, total removed {len(rep_tweets_long) - len(rep_tweets_withoutdublicates)}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-13T15:35:00.746964Z",
+     "start_time": "2024-04-13T15:35:00.681881Z"
+    }
+   },
+   "id": "d34e38f49a3641c7",
+   "execution_count": 35
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "def save(tweets, party):\n",
+    "    with open(f\"{party}.csv\", 'w', newline='') as f:\n",
+    "        writer = csv.writer(f)\n",
+    "        writer.writerow([\"text\"])\n",
+    "        for tweet in tweets:\n",
+    "            writer.writerow([tweet])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-13T15:36:05.128363Z",
+     "start_time": "2024-04-13T15:36:05.122698Z"
+    }
+   },
+   "id": "c7754ebcdfdec4d8",
+   "execution_count": 36
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "save(dem_tweets_withoutdublicates, \"democrat\")\n",
+    "save(rep_tweets_withoutdublicates, \"republican\")\n",
+    "\n",
+    "print(f\"Time taken: {datetime.now() - start_time}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-13T15:36:06.286456Z",
+     "start_time": "2024-04-13T15:36:05.506553Z"
     }
    },
    "id": "9f3a2a684b32f4ed",
-   "execution_count": 57
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "tweets = []\n",
-    "for i in range(len(rep_accs)):\n",
-    "    rep_tweets = os.listdir(os.path.join(\"rep\", rep_accs[i]))\n",
-    "    for j in range(len(rep_tweets)):\n",
-    "        data = json.load(open(os.path.join(\"rep\", rep_accs[i], rep_tweets[j])))\n",
-    "        tweet_text = remove_emojis_and_links(data[\"rawContent\"])\n",
-    "        if tweet_text != \"\":\n",
-    "            tweets.append(tweet_text)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-10T20:09:49.148893Z",
-     "start_time": "2024-04-10T20:08:41.566587Z"
-    }
-   },
-   "id": "b84d9e7d606e5e85",
-   "execution_count": 58
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "with open(\"republicans.csv\", 'w', newline='') as f:\n",
-    "    writer = csv.writer(f)\n",
-    "    writer.writerow([\"text\"])\n",
-    "    for tweet in tweets:\n",
-    "        writer.writerow([tweet])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-10T20:09:49.185656Z",
-     "start_time": "2024-04-10T20:09:49.150518Z"
-    }
-   },
-   "id": "177864028d9b5818",
-   "execution_count": 59
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-10T20:09:49.192965Z",
-     "start_time": "2024-04-10T20:09:49.187689Z"
-    }
-   },
-   "id": "7e2ae579c16a809d",
-   "execution_count": 59
+   "execution_count": 37
   }
  ],
  "metadata": {
